--- a/signin.html
+++ b/signin.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     // config.js content
-    const supabaseUrl = 'https://knxoqqictdypprargimx.supabase.co'; // GANTI DENGAN URL SUPABASE ANDA
+    const supabaseUrl = 'https://ivxlvkdvhroxkwbwnxda.supabase.co'; // GANTI DENGAN URL SUPABASE ANDA
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtueG9xcWljdGR5cHByYXJnaW14Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgxNjk3NDcsImV4cCI6MjA3Mzc0NTc0N30.hH27tYuVTJzpbKnjj2PVq3u3fD7PDwsm4ynM9nBYzsc'; // GANTI DENGAN ANON KEY SUPABASE ANDA
     const { createClient } = supabase;
     window.supabase = createClient(supabaseUrl, supabaseKey);
